# https://pypi.org/project/setupcfg-generator/
[metadata]
name = badge
version = 2019.4.13
url = https://github.com/looking-for-a-job/badge.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = badge

[options]
install_requires = 
	format_keys
	public
	setuptools
packages = 
	badge
